Added fixed file

--- a/14-blog-design/14-blog-design.html
+++ b/14-blog-design/14-blog-design.html
@@ -2,60 +2,121 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Blog designe</title>
-
-    <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-
+    <meta name="viewport" content="width=device-width">
+    <title>
+      Lost in Madagascar
+    </title>
   <body>
     <header>
-        <h1><a href="https://blog/lost_in_madagascar">Lost in Madagascar</a></h1>
+        <h1>
+          <a href="https://blog/lost_in_madagascar">
+            Lost in Madagascar
+          </a>
+        </h1>
+    </header>
+    <header>
       <nav>
         <ul>
           <li>
-              <a href="/home">HOME</a>
-              <a href="/about">ABOUT</a>
-              <a href="/sample_post">SAMPLE POST</a>
-              <a href="contact">CONTACT</a>
+            <a href="/home">
+              Home
+            </a>
+          </li>
+          <li>
+            <a href="/about">
+              About
+            </a>
+          </li>
+          <li>
+            <a href="/sample_post">
+              Sample post
+            </a>
+          </li>
+          <li>
+            <a href="contact">
+              Contact
+            </a>
           </li>
         </ul>
       </nav>
-    </header>
-    <main>
-      <div id="container"></div>
-      <div id="header">
-        <h2><a href="/lost"><b>Lost</b></a></h2>
+   </header>
+      <main>
+      <header>
+        <h2>
+          Lost
+        </h2>
+      </header>
         <p>Journal of a tourist lost in Madagascar</p>
-      </div>
-      <p>
-        <b>Man must explore, and this is exploration at its greatest.</b>
-      </p>
-      <p>
-        Problems look mighty small from 150 miles up
-      </p>
-      <small>
-        <a href="#">Posted by <b>Jesse</b> on September 24, 2019</a>
-      </small>
-      <p>
-        <b>I believe every human has a finite number of heartbeats. I don't intend to waste any of time.</b>
-      <p>
-      <small>
-        <a href="#">Posted by <b>Jesse</b> on September 18, 2019</a>
-      </small>
-      <small>
-        <a href="https://www.older_post.com"><br><mark>OLDER POSTS</mark></a>
-      </small>
-      <footer>
-        <a href="https://www.twitter.com">
-          <img src="twitter.png" alt="Go to twitter!" width="25" height="25">
-        </a>
-        <a href="https://www.facebook.com">
-          <img src="facebook.png" alt="Go to facebook!" width="30" height="30">
-        </a>
-        <a href="https://www.github.com">
-          <img src="github.png" alt="Go to github!" width="28" height="28">
-        </a>
-        <p><a href="/">Copyright &copy; Your website 2020</a></p><p></p>
-      </footer>
+      <nav>
+        <ol>
+          <li>
+            <header>
+              <a href="/">
+                <h3>
+                  Man must explore, and this is exploration at its greatest.
+                </h3>
+              </a>
+            </header>
+              <p>
+                Problems look mighty small from 150 miles up
+              </p>
+              <p>
+              <small>
+                Posted by
+              <a href="/jesse">
+                Jesse
+              </a>
+                on September 24, 2019
+              </small>
+              </p>
+          </li>
+          <li>
+            <a href="/">
+              <h3>
+                I believe every human has a finite number of heartbeats. I don't intend to waste any of time.
+              </h3>
+            </a>
+            <p>
+            <small>
+              Posted by
+            <a href="jesse">
+              Jesse
+            </a>
+              on September 18, 2019
+            </small>
+            </p>
+            <p>
+            <a href="https://www.older_post.com">
+              Older posts
+            </a>
+            </p>
+          </li>
+        </ol>
+      </nav>
     </main>
-  </body>
+    <footer>
+        <nav>
+          <ul>
+            <li>
+              <a href="https://www.twitter.com">
+                  Twitter
+                </a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com">
+                  Facebook
+                </a>
+              </li>
+              <li>
+                <a href="https://www.github.com">
+                  Github
+                </a>
+              </li>
+          </ul>
+        </nav>
+          <p>
+            Copyright © Your website 2020
+          </p>
+      </footer>
+    </body>
 </html>
